--- a/client/src/components/common/Loader/Loader.scss
+++ b/client/src/components/common/Loader/Loader.scss
@@ -1,6 +1,6 @@
 .loader {
-  position: fixed;
-  // position: absolute;
+  // position: fixed;
+  position: absolute;
   top: 0;
   height: 100vh;
   // height: 100%;
